--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -63,7 +63,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "\n",
+    "Mich_Huron = pd.read_csv('data/mhu.csv')\n",
+    "Mich_Huron.head()\n",
+    "\n",
+    "plt.plot(Mich_Huron['Michigan-Huron annual averages'],Mich_Huron['AnnAvg'])\n",
+    "plt.title('Avg Water Level vs Time')\n",
+    "plt.xlabel(\"Time (years)\")\n",
+    "plt.ylabel(\"Water Level (m)\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -290,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
