--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -81,7 +81,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "\n",
+    "superior = pd.read_csv(\"data/sup.csv\")\n",
+    "vals = np.array(superior[\"AnnAvg\"])\n",
+    "years = np.array(superior[\"Lake Superior annual averages\"])\n",
+    "plt.xlabel(\"Year\")\n",
+    "plt.ylabel(\"Average Water Level [m]\")\n",
+    "plt.title(\"Average Water Levels of Lake Superior\")\n",
+    "plt.plot(years,vals)\n",
+    "plt.show()"
    ]
   },
   {
@@ -290,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
