--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -99,7 +99,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "Earie = pd.read_csv(\"data/eri.csv\")\n",
+    "Earie.head()\n",
+    "\n",
+    "plt.plot(Earie[\"Lake Erie annual averages\"], Earie[\"Unnamed: 1\"])\n",
+    "plt.xlabel(\"Years (1860-2020)\")\n",
+    "plt.ylabel(\"Average Water levels (m)\")"
    ]
   },
   {
@@ -290,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
