--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -135,7 +135,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "mhu = pd.read_csv('data/mhu.csv')\n",
+    "sup = pd.read_csv('data/sup.csv')\n",
+    "mhu_data = [mhu.iloc[:,0],mhu.iloc[:,1]]\n",
+    "sup_data = [sup.iloc[:,0],sup.iloc[:,1]]\n",
+    "\n",
+    "plt.plot(mhu_data[0],mhu_data[1],'red',label = 'Michigan/Huron')\n",
+    "plt.plot(sup_data[0],sup_data[1], 'blue',label = 'Superior')\n",
+    "plt.xlim(1860,2015)\n",
+    "plt.ylim(170,190)\n",
+    "plt.legend()"
    ]
   },
   {
@@ -153,7 +166,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "# Insert Code Here\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "mhu = pd.read_csv('data/mhu.csv')\n",
+    "eri = pd.read_csv('data/eri.csv')\n",
+    "mhu_data = [mhu.iloc[:,0],mhu.iloc[:,1]]\n",
+    "eri_data = [eri.iloc[:,0],eri.iloc[:,1]]\n",
+    "print(sup_data[0])\n",
+    "\n",
+    "plt.plot(mhu_data[0],mhu_data[1],'red',label='Michigan/Huron')\n",
+    "plt.plot(eri_data[0],eri_data[1],'blue',label='Erie')\n",
+    "plt.xlim(1860,2015)\n",
+    "plt.ylim(170,190)\n",
+    "plt.legend()"
    ]
   },
   {
@@ -290,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
