adding the .ipynb file

--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -140,7 +140,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "\n",
+    "# Insert Code Here\n",
+    "\n",
+    "points= pd.read_csv('data/ont.csv')\n",
+    "x=np.array(points['Lake Ontario annual averages'])\n",
+    "y=np.array(points['AnnAvg'])\n",
+    "\n",
+    "plt.plot(x,y,color='r',label='plot')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Avg water level') \n",
+    "plt.show()"
    ]
   },
   {
